Add pattern to footer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </section>
         </div>
     </article>
+    <div class="section-divider"></div>
     <footer>
         <img id="uade-logo" src="assets/images/uade.webp" alt="UADE">
     </footer>
